styles/style2.css
body {
  font: normal 16px Arial, Helvetica, sans-serif;
  text-align: center;
  line-height: 1.6em;
  background: #303030;
  color: #bed7f9;
  max-width:100%;
  overflow-x: hidden;
  padding-bottom:10%;
}
.head {
  color: #76a1ef;
  padding-top: 50px;
}

.head1 {
  color: #76a1ef;
  padding-bottom: 30px;
  padding-top: 120px;
}

.head2 {
  color: #76a1ef;
  padding-bottom: 30px;
  padding-top: 50px;
}

.head3 {
  color: #76a1ef;
  padding-top:50px;
  padding-bottom:50px;
}

.subhead {
  color: #76a1ef;
  padding-top: 180px;
}

.slogan {
  padding-bottom: 80px;
}

.meet1 {
  text-align: left;
}

.meet2 {
  text-align: center;
}

.meet3 {
  text-align: right;
}

.button {
  text-align: center;
  padding-top: 80px;
  padding-bottom: 120px;
  background-color: #fff;
  border: none;
  color: white;
  padding: 15px 45px;
  text-decoration: none;
  font-size: 16px;
  transition-duration: 0.4s;
  display: inline-block;
}
.button1 {
  background-color: #303030;
  color: #bed7f9;
  border: 2px solid #fff;
  margin-right: 15px;
}

.button1:hover {
  background-color: #fff;
  color: black;
}

.button2 {
  background-color: #303030;
  color: #bed7f9;
  border: 2px solid #fff;
  margin-top:7%;
  
}

.button2:hover {
  background-color: #fff;
  color: black;
}

.button3 {
  background-color: #303030;
  color: #bed7f9;
  border: 2px solid #fff;
  margin-top:3%;
  
}

.button3:hover {
  background-color: #fff;
  color: black;
}

.navbarimage {
  line-height:0em;
  padding-top: 1rem;
  padding-bottom: 0rem;
  margin-right: 1rem;
  margin-left: 0.5rem;
}

.navbar1 {
  color: white;
  text-decoration: none;
  font-size: 18px;
  margin-bottom:0px;
  margin-top:0px;
}

.img {
  padding-top: 5%;

}

.text {
  width:65%;
  margin:auto;
}

.list-group-item {
  text-align:left;
  width:auto;
  margin:auto;
  background-color:#303030;
  color: #bed7f9;
  border-color:#303030;
}

.division {
  margin:auto;
  width:auto;
}

.test {
  margin:auto;
}

